--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -22,6 +22,7 @@
 
 .site-header {
     border-top: 0px;
+    z-index: 10;
 }
 
 .responsive-video {
@@ -38,4 +39,5 @@
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 0;
 }
