--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,4 @@
 <header class="site-header">
-
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.minima.nav_pages | default: default_paths -%}
@@ -10,19 +9,12 @@
 
     {%- unless page_titles == empty %}
       <nav class="site-nav">
-        <input type="checkbox" id="nav-trigger" class="nav-trigger" />
+        <input type="checkbox" id="nav-trigger" />
         <label for="nav-trigger">
           <span class="menu-icon"></span>
         </label>
 
-        <div class="drawer-container">
-          <div class="drawer">
-            {%- include nav-items.html paths = page_paths %}
-          </div>
-        </div>
-        <div class="slab">
-          {%- include nav-items.html paths = page_paths %}
-        </div>
+        {% include nav-items.html paths = page_paths %}
       </nav>
     {%- endunless %}
   </div>
